force-app/main/default/objects/Requisitions__c/fields/Chief_Operating_Officer_Approval__c.field-meta.xml
<CustomField>
    <fullName>Chief_Operating_Officer_Approval__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Chief Operating Officer Approval</label>
    <type>Checkbox</type>
</CustomField>