force-app/main/default/objects/Requisitions__c/fields/Division_Head_Approval__c.field-meta.xml
<CustomField>
    <fullName>Division_Head_Approval__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Division Head Approval</label>
    <type>Checkbox</type>
</CustomField>