force-app/main/default/objects/Requisitions__c/fields/Education_Requirements__c.field-meta.xml
<CustomField>
    <fullName>Education_Requirements__c</fullName>
    <label>Education Requirements</label>
    <type>TextArea</type>
</CustomField>