force-app/main/default/objects/Requisitions__c/fields/Employment_Location__c.field-meta.xml
<CustomField>
    <fullName>Employment_Location__c</fullName>
    <label>Employment Location</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Palo Alto, CA</fullName>
                <default>true</default>
                <label>Palo Alto, CA</label>
            </value>
            <value>
                <fullName>St. Paul, MN</fullName>
            </value>
            <value>
                <fullName>London, UK</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>