force-app/main/default/objects/Requisitions__c/fields/Interviewer_s_1st_Round__c.field-meta.xml
<CustomField>
    <fullName>Interviewer_s_1st_Round__c</fullName>
    <label>Interviewer(s) - 1st Round</label>
    <type>TextArea</type>
</CustomField>