force-app/main/default/objects/Requisitions__c/fields/Interviewer_s_Final_Round__c.field-meta.xml
<CustomField>
    <fullName>Interviewer_s_Final_Round__c</fullName>
    <label>Interviewer(s) - Final Round</label>
    <type>TextArea</type>
</CustomField>