force-app/main/default/objects/Requisitions__c/fields/Selected_Candidate__c.field-meta.xml
<CustomField>
    <fullName>Selected_Candidate__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Selected Candidate</label>
    <referenceTo>SFDC_Candidate__c</referenceTo>
    <relationshipName>Requisitions</relationshipName>
    <type>Lookup</type>
</CustomField>