force-app/main/default/objects/Requisitions__c/fields/Targeted_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Targeted_Start_Date__c</fullName>
    <label>Targeted Start Date:</label>
    <type>Date</type>
</CustomField>